--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Term-TermKey
 
+0.05    CHANGES:
+         * Updated for libtermkey 0.5; addsmouse support
+         * Added 'use warnings' also to example scripts
+
 0.04    CHANGES:
          * Use binmode :encoding(UTF-8) rather than :utf8
          * Updated for libtermkey 0.3
