--- a/README
+++ b/README
@@ -122,6 +122,13 @@ METHODS
     initialisation, and the result stored for easier comparisons during
     runtime.
 
+  ( $ev, $button, $line, $col ) = $tk->interpret_mouse( $key )
+    If $key contains a mouse event then its details are returned in a list.
+    $ev will be one of the "TERMKEY_MOUSE_*" constants, $button will be the
+    button number it relates to, and $line and $col will give the screen
+    coordinates, numbered from 1. If $key does not contain a mouse event
+    then an empty list is returned.
+
   $str = $tk->format_key( $key, $format )
     Return a string representation of the keypress event in $key, following
     the flags given. See the descriptions of the flags, below, for more
@@ -141,12 +148,16 @@ KEY OBJECTS
 
   $key->type
     The type of event. One of "TYPE_UNICODE", "TYPE_FUNCTION",
-    "TYPE_KEYSYM".
+    "TYPE_KEYSYM", "TYPE_MOUSE".
 
   $key->type_is_unicode
   $key->type_is_function
   $key->type_is_keysym
+  $key->type_is_mouse
     Shortcuts which return a boolean.
+
+    In the case of a mouse event, you must use the "interpret_mouse" method
+    on the containing "Term::TermKey" object to access the event details.
 
   $key->codepoint
     The Unicode codepoint number for "TYPE_UNICODE", or 0 otherwise.
@@ -183,6 +194,9 @@ EXPORTED CONSTANTS
     "TYPE_KEYSYM"
         a symbolic key
 
+    "TYPE_MOUSE"
+        a mouse movement or button press or release
+
     These constants are result values from "getkey()", "getkey_force()",
     "waitkey()" or "advisereadable()"
 
@@ -207,6 +221,22 @@ EXPORTED CONSTANTS
     "KEYMOD_ALT"
     "KEYMOD_CTRL"
         Should be obvious ;)
+
+    These constants are types of mouse event which may be returned by
+    "interpret_mouse":
+
+    "TERMKEY_MOUSE_UNKNOWN"
+        The type of mouse event was not recognised
+
+    "TERMKEY_MOUSE_PRESS"
+        The event reports a mouse button being pressed
+
+    "TERMKEY_MOUSE_DRAG"
+        The event reports the mouse being moved while a button is held down
+
+    "TERMKEY_MOUSE_RELEASE"
+        The event reports the mouse buttons being released, or the mouse
+        moved without a button held.
 
     These constants are flags for the constructor, "Term::TermKey->new"
 
@@ -248,6 +278,10 @@ EXPORTED CONSTANTS
         If the key event is a special key instead of unmodified Unicode,
         wrap it in "<brackets>".
 
+    "FORMAT_MOUSE_POS"
+        If the event is a mouse event, also include the cursor position;
+        rendered as "@ ($col,$line)"
+
     "FORMAT_VIM"
         Shortcut to "FORMAT_ALTISMETA|FORMAT_WRAPBRACKET"; which gives an
         output close to the format the vim editor uses.
@@ -257,13 +291,13 @@ EXAMPLES
     This program just prints every keypress until the user presses "Ctrl-C".
 
      use Term::TermKey qw( FLAG_UTF8 RES_EOF KEYMOD_CTRL FORMAT_VIM );
-     
- my $tk = Term::TermKey->new(\*STDIN);
-     
- # ensure perl and libtermkey agree on Unicode handling
+ 
+     my $tk = Term::TermKey->new(\*STDIN);
+ 
+     # ensure perl and libtermkey agree on Unicode handling
      binmode( STDOUT, ":encoding(UTF-8)" ) if $tk->get_flags & FLAG_UTF8;
-     
- while( ( my $ret = $tk->waitkey( my $key ) ) != RES_EOF ) {
+ 
+     while( ( my $ret = $tk->waitkey( my $key ) ) != RES_EOF ) {
         print "Got key: ".$tk->format_key( $key, FORMAT_VIM )."\n";
 
         last if $key->type_is_unicode and 
@@ -280,10 +314,10 @@ EXAMPLES
     lacking many features in a true line editor like readline.
 
      use Term::TermKey qw( FLAG_UTF8 RES_EOF FORMAT_LONGMOD );
-     
- my $tk = Term::TermKey->new(\*STDIN);
-     
- # ensure perl and libtermkey agree on Unicode handling
+ 
+     my $tk = Term::TermKey->new(\*STDIN);
+ 
+     # ensure perl and libtermkey agree on Unicode handling
      binmode( STDOUT, ":encoding(UTF-8)" ) if $tk->get_flags & FLAG_UTF8;
 
      my $line = "";
@@ -311,8 +345,8 @@ EXAMPLES
 
         # other handlers ...
      );
-     
- while( ( my $ret = $tk->waitkey( my $key ) ) != RES_EOF ) {
+ 
+     while( ( my $ret = $tk->waitkey( my $key ) ) != RES_EOF ) {
         my $handler = $key_handlers{ $tk->format_key( $key, FORMAT_LONGMOD ) };
         if( $handler ) {
            $handler->( $key );
@@ -333,48 +367,48 @@ EXAMPLES
      use Term::TermKey qw(
         FLAG_UTF8 KEYMOD_CTRL RES_KEY RES_AGAIN RES_EOF FORMAT_VIM
      );
-     
- my $select = IO::Select->new();
-     
- my $tk = Term::TermKey->new(\*STDIN);
+ 
+     my $select = IO::Select->new();
+ 
+     my $tk = Term::TermKey->new(\*STDIN);
      $select->add(\*STDIN);
-     
- # ensure perl and libtermkey agree on Unicode handling
+ 
+     # ensure perl and libtermkey agree on Unicode handling
      binmode( STDOUT, ":encoding(UTF-8)" ) if $tk->get_flags & FLAG_UTF8;
-     
- sub on_key
+ 
+     sub on_key
      {
         my ( $tk, $key ) = @_;
-     
-    print "You pressed " . $tk->format_key( $key, FORMAT_VIM ) . "\n";
-     
-    exit if $key->type_is_unicode and
+ 
+        print "You pressed " . $tk->format_key( $key, FORMAT_VIM ) . "\n";
+ 
+        exit if $key->type_is_unicode and
                 lc $key->utf8 eq "c" and
                 $key->modifiers & KEYMOD_CTRL;
      }
-     
- my $again = 0;
-     
- while(1) {
+ 
+     my $again = 0;
+ 
+     while(1) {
         my $timeout = $again ? $tk->get_waittime/1000 : undef;
         my @ready = $select->can_read($timeout);
-     
-    if( !@ready ) {
+ 
+        if( !@ready ) {
            my $ret;
            while( ( $ret = $tk->getkey_force( my $key ) ) == RES_KEY ) {
               on_key( $tk, $key );
            }
         }
-     
-    while( my $fh = shift @ready ) {
+ 
+        while( my $fh = shift @ready ) {
            if( $fh == \*STDIN ) {
               $tk->advisereadable;
               my $ret;
               while( ( $ret = $tk->getkey( my $key ) ) == RES_KEY ) {
                  on_key( $tk, $key );
               }
-     
-          $again = ( $ret == RES_AGAIN );
+ 
+              $again = ( $ret == RES_AGAIN );
               exit if $ret == RES_EOF;
            }
            # Deal with other filehandles here
