--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Term-TermKey
 
+0.10    CHANGES:
+         * Updated for libtermkey 0.10:
+           + Wrap TERMKEY_CANON_* flags and termkey_{get,set} functions
+        
+        BUGFIXES:
+         * Ensure that EINTR flag shadowing doesn't break ability to read the
+           RAW or UTF8 flags back out of the underlying object
+
 0.09    CHANGES:
          * Updated for libtermkey 0.9:
            + Wrap TERMKEY_RES_ERROR, TERMKEY_FLAG_EINTR
